--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,7 +21,7 @@ target_link_libraries(convert_to_hdf5 LP_MP-QAP m stdc++ pthread HDF5)
 foreach( source_file ${SOURCE_FILES} )
    string( REPLACE ".cpp" "" executable_file ${source_file} )
    add_executable( ${executable_file} ${source_file})
-   target_link_libraries( ${executable_file} LP_MP-QAP m stdc++ pthread lingeling )
+   target_link_libraries( ${executable_file} LP_MP-QAP m stdc++ pthread )
 endforeach( source_file ${SOURCE_FILES} )
 
 # with proximal bundle
@@ -34,7 +34,7 @@ SET(PROXIMAL_BUNDLE_SOLVERS
 foreach( source_file ${PROXIMAL_BUNDLE_SOLVERS} )
     string( REPLACE ".cpp" "" executable_file ${source_file} )
     add_executable( ${executable_file} ${source_file} )
-    target_link_libraries( ${executable_file} lingeling LP_MP-QAP m stdc++ pthread FW-MAP arboricity)
+    target_link_libraries( ${executable_file} LP_MP-QAP m stdc++ pthread FW-MAP arboricity)
 endforeach( source_file ${SOURCE_FILES} )
 
 # with conic bundle
